Changing grafana user name

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SUPABASE_ORGANIZATION_ID=
 PASSWORD_PROTECTED=true
 # Create your own password on the line below, then log into your dashboard with user "admin" and this password
 GRAFANA_PASSWORD=
+GRAFANA_USER=admin
