--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,6 @@ services:
       SUPABASE_SERVICE_ROLE_KEY: ${SUPABASE_SERVICE_ROLE_KEY}
       PASSWORD_PROTECTED: ${PASSWORD_PROTECTED}
       GRAFANA_PASSWORD: ${GRAFANA_PASSWORD}
+      GRAFANA_USER: ${GRAFANA_USER}
     volumes:
       - ./data:/data
